Updated by kodi-game-scripting
https://github.com/kodi-game/kodi-game-scripting/

--- a/game.libretro.mrboom/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.mrboom/resources/language/resource.language.en_gb/strings.po
@@ -21,13 +21,17 @@ msgid "Settings"
 msgstr ""
 
 msgctxt "#30001"
-msgid "Drop bomb autofire"
+msgid "Aspect ratio"
 msgstr ""
 
 msgctxt "#30002"
-msgid "Monsters"
+msgid "Drop bomb autofire"
 msgstr ""
 
 msgctxt "#30003"
+msgid "Monsters"
+msgstr ""
+
+msgctxt "#30004"
 msgid "Team mode"
 msgstr ""
