--- a/game.libretro.mrboom/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.mrboom/resources/language/resource.language.en_gb/strings.po
@@ -5,42 +5,24 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: game.libretro.mrboom\n"
-"Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: 2016-10-25 17:00+8\n"
 "PO-Revision-Date: 2016-10-25 17:00+8\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: English (http://www.transifex.com/projects/p/xbmc-addons/language/en/)\n"
+"Language-Team: English (https://kodi.weblate.cloud/languages/en_gb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-msgctxt "#30000"
-msgid "Settings"
+msgctxt "Addon Summary"
+msgid "Mr.Boom (Bomberman) 5.2"
 msgstr ""
 
-msgctxt "#30001"
-msgid "Aspect ratio"
-msgstr ""
+msgctxt "Addon Description"
+msgid "Mr.Boom is a freeware 8 players Bomberman clone.
 
-msgctxt "#30002"
-msgid "Level select"
-msgstr ""
-
-msgctxt "#30003"
-msgid "Music volume"
-msgstr ""
-
-msgctxt "#30004"
-msgid "Monsters"
-msgstr ""
-
-msgctxt "#30005"
-msgid "Sfx volume"
-msgstr ""
-
-msgctxt "#30006"
-msgid "Team mode"
+Supports up to 8 players and features like pushing bombs, remote controls and kangaroo riding..."
 msgstr ""
 
