Revert "Update translation files"
This reverts commit aecd3cd8cfd83288777d80a8459d626da1bdec87.

--- a/game.libretro.mrboom/resources/language/resource.language.zh_cn/strings.po
+++ b/game.libretro.mrboom/resources/language/resource.language.zh_cn/strings.po
@@ -25,30 +25,30 @@ msgctxt "Addon Description"
 msgid "Mr.Boom is a freeware 8-player Bomberman clone. It features pushing bombs, remote controls, kangaroo riding, and more."
 msgstr "Mr.Boom 是一个自由软件的8玩家《炸弹人》游戏克隆。它以推炸弹、遥控、袋鼠骑行等为特色。"
 
-#~ msgctxt "#30000"
-#~ msgid "Settings"
-#~ msgstr "设置"
+msgctxt "#30000"
+msgid "Settings"
+msgstr "设置"
 
-#~ msgctxt "#30001"
-#~ msgid "Aspect ratio"
-#~ msgstr "宽高比"
+msgctxt "#30001"
+msgid "Aspect ratio"
+msgstr "宽高比"
 
-#~ msgctxt "#30002"
-#~ msgid "Level select"
-#~ msgstr "级别选择"
+msgctxt "#30002"
+msgid "Level select"
+msgstr "级别选择"
 
-#~ msgctxt "#30003"
-#~ msgid "Music volume"
-#~ msgstr "音乐音量"
+msgctxt "#30003"
+msgid "Music volume"
+msgstr "音乐音量"
 
-#~ msgctxt "#30004"
-#~ msgid "Monsters"
-#~ msgstr "怪物"
+msgctxt "#30004"
+msgid "Monsters"
+msgstr "怪物"
 
-#~ msgctxt "#30005"
-#~ msgid "Sfx volume"
-#~ msgstr "Sfx 音量"
+msgctxt "#30005"
+msgid "Sfx volume"
+msgstr "Sfx 音量"
 
-#~ msgctxt "#30006"
-#~ msgid "Team mode"
-#~ msgstr "团队模式"
+msgctxt "#30006"
+msgid "Team mode"
+msgstr "团队模式"
