--- a/game.libretro.mrboom/resources/language/resource.language.da_dk/strings.po
+++ b/game.libretro.mrboom/resources/language/resource.language.da_dk/strings.po
@@ -25,30 +25,30 @@ msgctxt "Addon Description"
 msgid "Mr.Boom is a freeware 8-player Bomberman clone. It features pushing bombs, remote controls, kangaroo riding, and more."
 msgstr "Mr.Boom er en freeware 8-spiller Bomberman klon. Den har bomber, fjernbetjeninger, kænguru-ridning og meget mere."
 
-#~ msgctxt "#30000"
-#~ msgid "Settings"
-#~ msgstr "Indstillinger"
+msgctxt "#30000"
+msgid "Settings"
+msgstr "Indstillinger"
 
-#~ msgctxt "#30001"
-#~ msgid "Aspect ratio"
-#~ msgstr "Billedformat"
+msgctxt "#30001"
+msgid "Aspect ratio"
+msgstr "Billedformat"
 
-#~ msgctxt "#30002"
-#~ msgid "Level select"
-#~ msgstr "Vælg level"
+msgctxt "#30002"
+msgid "Level select"
+msgstr "Vælg level"
 
-#~ msgctxt "#30003"
-#~ msgid "Music volume"
-#~ msgstr "Lydniveau for musik"
+msgctxt "#30003"
+msgid "Music volume"
+msgstr "Lydniveau for musik"
 
-#~ msgctxt "#30004"
-#~ msgid "Monsters"
-#~ msgstr "Monstre"
+msgctxt "#30004"
+msgid "Monsters"
+msgstr "Monstre"
 
-#~ msgctxt "#30005"
-#~ msgid "Sfx volume"
-#~ msgstr "Lydstyrke for effekter"
+msgctxt "#30005"
+msgid "Sfx volume"
+msgstr "Lydstyrke for effekter"
 
-#~ msgctxt "#30006"
-#~ msgid "Team mode"
-#~ msgstr "Tilstand for hold"
+msgctxt "#30006"
+msgid "Team mode"
+msgstr "Tilstand for hold"
