--- a/game.libretro.mrboom/resources/language/resource.language.es_es/strings.po
+++ b/game.libretro.mrboom/resources/language/resource.language.es_es/strings.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: game.libretro.mrboom\n"
 "Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: 2016-10-25 17:00+8\n"
-"PO-Revision-Date: 2023-01-17 05:01+0000\n"
-"Last-Translator: José Antonio Alvarado <jalvarado0.eses@gmail.com>\n"
+"PO-Revision-Date: 2021-07-12 12:29+0000\n"
+"Last-Translator: Alfonso Cachero <alfonso.cachero@gmail.com>\n"
 "Language-Team: Spanish (Spain) <https://kodi.weblate.cloud/projects/kodi-add-ons-game/game-libretro-mrboom/es_es/>\n"
 "Language: es_es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.15\n"
+"X-Generator: Weblate 4.7.1\n"
 
 msgctxt "Addon Summary"
 msgid "Mr.Boom (Bomberman) 5.2"
@@ -23,32 +23,32 @@ msgstr ""
 
 msgctxt "Addon Description"
 msgid "Mr.Boom is a freeware 8-player Bomberman clone. It features pushing bombs, remote controls, kangaroo riding, and more."
-msgstr "Mr.Boom es un clon gratuito de Bomberman para 8 jugadores. Entre sus funciones se encuentran empujar bombas, mandos a distancia, montar canguros y mucho más."
+msgstr ""
 
-#~ msgctxt "#30000"
-#~ msgid "Settings"
-#~ msgstr "Ajustes"
+msgctxt "#30000"
+msgid "Settings"
+msgstr "Ajustes"
 
-#~ msgctxt "#30001"
-#~ msgid "Aspect ratio"
-#~ msgstr "Relación de Aspecto"
+msgctxt "#30001"
+msgid "Aspect ratio"
+msgstr ""
 
-#~ msgctxt "#30002"
-#~ msgid "Level select"
-#~ msgstr "Seleccionar Nivel"
+msgctxt "#30002"
+msgid "Level select"
+msgstr ""
 
-#~ msgctxt "#30003"
-#~ msgid "Music volume"
-#~ msgstr "Volumen Música"
+msgctxt "#30003"
+msgid "Music volume"
+msgstr ""
 
-#~ msgctxt "#30004"
-#~ msgid "Monsters"
-#~ msgstr "Monstruos"
+msgctxt "#30004"
+msgid "Monsters"
+msgstr ""
 
-#~ msgctxt "#30005"
-#~ msgid "Sfx volume"
-#~ msgstr "Volumen Sfx"
+msgctxt "#30005"
+msgid "Sfx volume"
+msgstr ""
 
-#~ msgctxt "#30006"
-#~ msgid "Team mode"
-#~ msgstr "Modo Equipo"
+msgctxt "#30006"
+msgid "Team mode"
+msgstr ""
