--- a/game.libretro.mrboom/resources/language/resource.language.it_it/strings.po
+++ b/game.libretro.mrboom/resources/language/resource.language.it_it/strings.po
@@ -25,30 +25,30 @@ msgctxt "Addon Description"
 msgid "Mr.Boom is a freeware 8-player Bomberman clone. It features pushing bombs, remote controls, kangaroo riding, and more."
 msgstr "Mr.Boom è un clone gratuito di Bomberman per 8 giocatori. È dotato di bombe a spinta, telecomandi, canguro a cavallo e altro ancora."
 
-#~ msgctxt "#30000"
-#~ msgid "Settings"
-#~ msgstr "Impostazioni"
+msgctxt "#30000"
+msgid "Settings"
+msgstr "Impostazioni"
 
-#~ msgctxt "#30001"
-#~ msgid "Aspect ratio"
-#~ msgstr "Proporzioni"
+msgctxt "#30001"
+msgid "Aspect ratio"
+msgstr "Proporzioni"
 
-#~ msgctxt "#30002"
-#~ msgid "Level select"
-#~ msgstr "Selezione livello"
+msgctxt "#30002"
+msgid "Level select"
+msgstr "Selezione livello"
 
-#~ msgctxt "#30003"
-#~ msgid "Music volume"
-#~ msgstr "Volume musica"
+msgctxt "#30003"
+msgid "Music volume"
+msgstr "Volume musica"
 
-#~ msgctxt "#30004"
-#~ msgid "Monsters"
-#~ msgstr "Mostri"
+msgctxt "#30004"
+msgid "Monsters"
+msgstr "Mostri"
 
-#~ msgctxt "#30005"
-#~ msgid "Sfx volume"
-#~ msgstr "Volume Sfx"
+msgctxt "#30005"
+msgid "Sfx volume"
+msgstr "Volume Sfx"
 
-#~ msgctxt "#30006"
-#~ msgid "Team mode"
-#~ msgstr "Modalità squadra"
+msgctxt "#30006"
+msgid "Team mode"
+msgstr "Modalità squadra"
