--- a/game.libretro.mrboom/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.mrboom/resources/language/resource.language.en_gb/strings.po
@@ -23,3 +23,31 @@ msgstr ""
 msgctxt "Addon Description"
 msgid "Mr.Boom is a freeware 8-player Bomberman clone. It features pushing bombs, remote controls, kangaroo riding, and more."
 msgstr ""
+
+msgctxt "#30000"
+msgid "Settings"
+msgstr ""
+
+msgctxt "#30001"
+msgid "Team mode"
+msgstr ""
+
+msgctxt "#30002"
+msgid "Monsters"
+msgstr ""
+
+msgctxt "#30003"
+msgid "Level select"
+msgstr ""
+
+msgctxt "#30004"
+msgid "Aspect ratio"
+msgstr ""
+
+msgctxt "#30005"
+msgid "Music volume"
+msgstr ""
+
+msgctxt "#30006"
+msgid "Sfx volume"
+msgstr ""
