--- a/game.libretro.mrboom/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.mrboom/resources/language/resource.language.en_gb/strings.po
@@ -24,9 +24,7 @@ msgctxt "Addon Description"
 msgid "Mr.Boom is a freeware 8-player Bomberman clone. It features pushing bombs, remote controls, kangaroo riding, and more."
 msgstr ""
 
-msgctxt "#30000"
-msgid "Settings"
-msgstr ""
+# Empty string with ID 30000
 
 msgctxt "#30001"
 msgid "Team mode"
